name:                pkcs7
version:             0.1.0
synopsis:            PKCS #7 / CMS data structures and functions
description:         Please see README.md
license:             AllRightsReserved
author:              Enno Cramer
maintainer:          Enno Cramer <cramer@hornetsecurity.com>
copyright:           Copyright Hornetsecurity (c) 2015
category:            Data
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Data.Pkcs7.ASN1
                     , Data.Pkcs7.Parse
                     , Data.Pkcs7.Print
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.6 && < 0.11
                     , hourglass >= 0.2.9 && < 0.3
                     , asn1-types >= 0.3.1 && < 0.4
                     , asn1-parse >= 0.9.4 && < 0.10
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test-pkcs7
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , tasty >= 0.10.1 && < 0.11
                     , pkcs7
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite style-pkcs7
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLint.hs
  build-depends:       base >=4.7 && <5
                     , hlint ==1.*
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
